@@ -613,12 +613,14 @@
     </PublishOptions>
     <RunParams>
       <local>
+        <CommandLineParams Value="./servicebatchtest.opsiscript -ServiceBatch  -opsiservice https://localhost:4447/rpc -username uib-mmini2.uib.local -password 4acf3d9a4eb31dbb48770bea77fac489 -clientid uib-mmini2.uib.local -productid opsi-script-test"/>
         <LaunchingApplication PathPlusParams="C:/Windows/system32/cmd.exe /C ${TargetCmdLine}"/>
       </local>
       <FormatVersion Value="2"/>
       <Modes Count="3">
         <Mode0 Name="default">
           <local>
+            <CommandLineParams Value="./servicebatchtest.opsiscript -ServiceBatch  -opsiservice https://localhost:4447/rpc -username uib-mmini2.uib.local -password 4acf3d9a4eb31dbb48770bea77fac489 -clientid uib-mmini2.uib.local -productid opsi-script-test"/>
             <LaunchingApplication PathPlusParams="C:/Windows/system32/cmd.exe /C ${TargetCmdLine}"/>
           </local>
         </Mode0>
