@@ -27,6 +27,8 @@ opsi-script (4.12.4.23) stable; urgency=low
  * removing links to http://www.opsi.org/credits/
  * osinteractivegui: set copyright tro 1995-2021
  * Fixes detection of w10 release > 2009 (21h1) (osparser) ; fixes #4665
+ * New cli parameter /ServiceBatch  if /serviceBatch then also needed:
+          /ClientId <> /opsiservice <> /username <> /password <> /productId <> and <script path>
 
 -- d.oertel <d.oertel@uib.de> Tue, 08 June 2021 15:00
 
